# cvbot-white-demo

./: .gitignore  STOP.py  detect.py  detect_from_cam_pt.py  disable-ap.sh  enable-ap.sh  example.ipynb  list_cams.py  pid.py  pyproject.toml  requirements_.txt  run_bot.py  run_bot_D.py  run_bot_ssh.py  test_camera.py
cvbot/communication/: txtapiclient.py
