[tool.poetry]
name = "cvbot"
version = "0.1.0"
description = ""
authors = ["Jan Philipp Schneider <jp-schneider@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
cvtools = {git = "https://github.com/Computer-Vision-Group-Siegen/cvtools"}
cvtxtclient = {git = "https://github.com/Computer-Vision-Group-Siegen/cvtxtclient"}
toml = "^0.10.2"
pillow = "^11.2.1"
matplotlib = "^3.10.3"


[tool.poetry.group.api.dependencies]
fastapi = "^0.115.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
ipykernel = "^6.29.5"
pre-commit = "^4.2.0"


[tool.poetry.group.ui.dependencies]
pyside6 = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
